test/cases/compile_errors/SpirvType_is_a_compile_error_in_non-SPIRV_targets.zig
comptime {
    _ = @SpirvType(.{ .runtime_array = u32 });
}

// error
// backend=selfhosted
// target=x86_64-native
//
// :2:9: error: builtin @SpirvType is only available when targeting SPIR-V; targeted CPU architecture is x86_64
